--- a/_layouts/TIL.html
+++ b/_layouts/TIL.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include header.html %}
 
-<div class="content post">
+<div class="content TIL">
   <h1 class="TIL-title">{{ page.title }}</h1>
   <div class="TIL-date">
     <time>{{ page.date | date_to_string }}</time>
