--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
-
+<link href="{{site.baseurl}}/css/common.css" rel="stylesheet">
 <body class="preload">
     <div class="top"></div>
     <div class="profile" style="background-image: url({{site.background}});">
