2019-12-01-Week1-Post-fix6

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <footer>
-  <p>Source: <a href="{{page.source}}">{{page.source}}</a></p>
+  <!-- <p>Source: <a href="{{page.source}}">{{page.source}}</a></p> -->
   <!--first{{page.source}} is referencing the source of the called page(http whatever). second {{page.source}} is the name that will be visible for the link in ur blog or whatever  -->
 </footer>
 
