--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
         <p>{{ site.description }}</p>
         <ul class="social">
             {% if site.github %}
-            <a type="button" href="http://github.com/{{ site.github }}">
+            <a type="button" href="http://{{ site.github }}">
                 <i class="fa fa-github"></i>
             </a>
             {% endif %} {% if site.twitter %}
